# rtl_code

./: README.md
mini_task/check_connect/: CMakeLists.txt  Rtl_connect_process.cpp  Rtl_connect_process.hpp  main.cpp
receiver/: CMakeLists.txt  ReciverRtl.hpp  main.cpp
